<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".List">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/design_default_color_background"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Table Head -->

        <TableRow android:background="@color/purple_500">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nome"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/endereco"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bairro"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cep"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </TableRow>

        <!-- Table Data -->
        <TableRow android:background="@color/white">

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>